--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     </div>
 
                 </div>
-                <div class="order-1 md:order-2 bg-slate-200 row-span-3 p-4 rounded-2xl">
+                <div class="order-1 md:order-2 bg-slate-200 row-span-3 p-4 rounded-2xl shadow-2xl">
                     <img  src="images/shopping.png" alt="">
                 </div>
                 <div class="order-3 bg-slate-200 rounded-2xl shadow-2xl p-4"> <img class=" h-20 w-20" src="images/house.png" alt="">
